<resources>
    <string name="app_name">趣读读</string>
    <string name="menu">菜单</string>
    <string name="menu_main">书架</string>
    <string name="menu_search">搜索</string>
    <string name="search_hint">请输入要搜索的书名/作者名</string>
    <string name="menu_set">设置</string>
    <string name="set_about">软件详情</string>
    <string name="set_version">当前版本</string>
    <string name="set_check">检查更新</string>
    <string name="app_about">关于</string>
    <string name="nothing_tip">没有更多了~</string>
    <string name="name_tip">请输入用户名</string>
    <string name="password_tip">请输入密码</string>
    <string name="password_check_tip">请再次输入密码</string>
    <string name="login_btn">登录</string>
    <string name="register_btn">注册</string>
    <string name="ok_btn">确定</string>
    <string name="cancel_btn">取消</string>
    <string name="welcome">欢迎注册本软件</string>
    <string name="register"><u>没有账号，注册</u></string>
    <string name="version_info">此软件仅用于学习交流，禁止商业用途</string>

    <string name="read_setting_led">亮度</string>
    <string name="read_system_led">跟随系统亮度</string>
    <string name="read_setting_background">背景</string>
    <string name="read_setting_font">字号</string>
    <string name="read_setting_flag">进度</string>

    <string name="PRE_NAME">ReadBooksShared</string>
    <string name="KEY_ID">AccountId</string>
    <string name="KEY_TOKEN">AccountToken</string>
    <string name="menu_exit">退出登录</string>
    <string name="menu_update">版本更新</string>
    <string name="menu_setting">设置</string>
    <string name="main_bookshelf">书架</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
</resources>
