<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="login_info"
            type="com.kkkkkn.readbooks.model.entity.LoginInfo" />
        <variable
            name="login_viewmodel"
            type="com.kkkkkn.readbooks.viewmodel.LoginViewModel" />
    </data>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".view.activities.LoginActivity">

    
    <ImageView
        android:layout_marginVertical="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"    />

    <TableLayout
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:gravity="center"
                android:text="用户名："
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:hint="@string/name_tip"
                android:id="@+id/edit_account_name"
                android:layout_weight="7"
                android:maxLength="10"
                android:text="@{login_info.login_name}"
                android:afterTextChanged="@{login_viewmodel::afterUserNameChanged}"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="center"
                android:text="密码："
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:hint="@string/password_tip"
                android:id="@+id/edit_account_password"
                android:layout_weight="7"
                android:inputType="textPassword"
                android:maxLength="10"
                android:afterTextChanged="@{login_viewmodel::afterPasswordChanged}"
                android:text="@{login_info.login_password}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>


    </TableLayout>

    <!--<CheckBox
        android:id="@+id/checkbox_rememberPassword"
        android:checked="true"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="记住密码"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/checkbox_autoLogin"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="自动登录"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>-->

    <Button
        android:background="@drawable/btn"
        android:id="@+id/login_btn"
        android:text="@string/login_btn"
        android:textSize="20sp"
        android:onClick="@{()->login_viewmodel.loginClick(login_info)}"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginRight="20dp"
        android:textColor="@color/colorBlue"
        android:id="@+id/jumpToRsg"
        android:onClick="@{login_viewmodel::jumpClick}"
        android:gravity="right"
        android:text="@string/register"
        android:autoLink="all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

</LinearLayout>
</layout>